# fullstack

./: .gitignore  skaffold.yaml
.github/workflows/: ci-cd.yaml
chart/: Chart.yaml
chart/templates/: api.yaml  db.yaml  frontend.yaml
images/api/: Dockerfile  Dockerfile.Dev  gunicorn_conf.py
images/frontend/: Dockerfile  Dockerfile.Dev
images/whoami/: Dockerfile
src/api/: pyproject.toml
