[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <elbenjakobjul@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
